Login, Subscribe and Search

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Imersão</title>
+    <link rel="stylesheet" href="css/vars.css">
+    <link rel="stylesheet" href="css/main-content.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/a3e2d66843.js" crossorigin="anonymous"></script>
@@ -90,6 +92,50 @@
 
         </div>
     </div>
-    
+
+    <main>
+
+        <div class="main-container">
+
+            <nav class="header_navigation">
+
+                <div class="navigation">
+
+                    <button class="arrow-left">
+
+                        <img src="./img/small-left.png" alt="Seta esquerda">
+
+                    </button>
+
+                    <button class="arrow-right">
+
+                        <img src="./img/small-right.png" alt="Seta direita">
+
+                    </button>
+
+                </div>
+
+                    <div class="header_search">
+
+                        <img src="./img/search.png" alt="">
+
+                        <input id="search-input" type="text" maxlength="800" placeholder="O que você quer ouvir?">
+
+                    </div>
+
+                    <div class="header_login">
+
+                        <button class="subscribe">Inscreva-se</button>
+
+                        <button class="login">Entrar</button>
+
+                    </div>
+
+            </nav>
+
+        </div>
+
+    </main>
+
 </body>
 </html>
