--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/main-content.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media-queries.css"> <!-- SEMPRE NO FINAL -->
     <script src="https://kit.fontawesome.com/a3e2d66843.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -133,9 +134,191 @@
 
             </nav>
 
+            <div class="playlist-container">
+
+                <div class="result-playlists">
+
+                    <div class="playlist">
+
+                        <h1 id="greeting">Boas vindas</h1>
+
+                        <h2 class="session">Navegar por todas as seções</h2>
+
+                    </div>
+
+                    <div class="offer_scroll-container">
+
+                        <div class="offer_list">
+
+                            <section class="offer_list-item">
+
+                                <a href="" class="cards">
+                                    <div class="cards card1">
+
+                                        <img src="./img/1.jpeg" alt="">
+                                        <span>Boas festas</span>
+
+                                    </div>
+                                </a>
+
+                                <a href="" class="cards">
+                                    <div class="cards card2">
+
+                                        <img src="./img/2.png" alt="">
+                                        <span>Feitos para você</span>
+
+                                    </div>
+                                </a>
+
+                                <a href="" class="cards">
+                                    <div class="cards card3">
+
+                                        <img src="./img/3.jpeg" alt="">
+                                        <span>Lançamentos</span>
+
+                                    </div>
+                                </a>
+
+                                <a href="" class="cards">
+                                    <div class="cards card4">
+
+                                        <img src="./img/4.jpeg" alt="">
+                                        <span>Creators</span>
+
+                                    </div>
+                                </a>
+
+                                <a href="" class="cards">
+                                    <div class="cards card5">
+
+                                        <img src="./img/5.jpeg" alt="">
+                                        <span>Para treinar</span>
+
+                                    </div>
+                                </a>
+
+                                <a href="" class="cards">
+                                    <div class="cards card6">
+
+                                        <img src="./img/6.jpeg" alt="">
+                                        <span>Podcasts</span>
+
+                                    </div>
+                                </a>
+
+                                <a href="" class="cards">
+                                    <div class="cards card7">
+
+                                        <img src="./img/7.jpeg" alt="">
+                                        <span>Sertanejo</span>
+
+                                    </div>
+                                </a>
+
+                                <a href="" class="cards">
+                                    <div class="cards card8">
+
+                                        <img src="./img/8.jpeg" alt="">
+                                        <span>Samba e pagode</span>
+
+                                    </div>
+                                </a>
+
+                                <a href="" class="cards">
+                                    <div class="cards card9">
+
+                                        <img src="./img/9.jpeg" alt="">
+                                        <span>Funk</span>
+
+                                    </div>
+                                </a>
+
+                                <a href="" class="cards">
+                                    <div class="cards card10">
+
+                                        <img src="./img/10.jpeg" alt="">
+                                        <span>MPB</span>
+
+                                    </div>
+                                </a>
+
+                                <a href="" class="cards">
+                                    <div class="cards card11">
+
+                                        <img src="./img/11.jpeg" alt="">
+                                        <span>Rock</span>
+
+                                    </div>
+                                </a>
+
+                                <a href="" class="cards">
+                                    <div class="cards card12">
+
+                                        <img src="./img/12.jpeg" alt="">
+                                        <span>Hip Hop</span>
+
+                                    </div>
+                                </a>
+
+                                <a href="" class="cards">
+                                    <div class="cards card13">
+
+                                        <img src="./img/13.jpeg" alt="">
+                                        <span>Indie</span>
+
+                                    </div>
+                                </a>
+
+                                <a href="" class="cards">
+                                    <div class="cards card14">
+
+                                        <img src="./img/14.jpeg" alt="">
+                                        <span>Relax</span>
+
+                                    </div>
+                                </a>
+
+                                <a href="" class="cards">
+                                    <div class="cards card15">
+
+                                        <img src="./img/15.jpeg" alt="">
+                                        <span>Música Latina</span>
+
+                                    </div>
+                                </a>
+
+                            </section>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div id="result-artist" class="hidden">
+                    <div class="grid-container">
+                        <div class="artist-card" id="">
+                            <div class="card-img">
+                                <img id="artist-img" class="artist-img" />
+                                <div class="play">
+                                    <span class="fa fa-solid fa-play"></span>
+                                </div>
+                            </div>
+                            <div class="card-text">
+                                <a title="Foo Fighters" class="vst" href=""></a>
+                                <span class="artist-name" id="artist-name"></span>
+                                <span class="artist-categorie">Artista</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
 
     </main>
+
+    <script type="text/javascript" src="./js/script.js"></script>
 
 </body>
 </html>
