--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
             <div class="playlist-container">
 
-                <div class="result-playlists">
+                <div id="result-playlists">
 
                     <div class="playlist">
 
