--- a/index.html
+++ b/index.html
@@ -318,6 +318,23 @@
 
     </main>
 
+    <footer class="disclaimer-premium">
+
+        <div class="text">
+
+            <p class="disclaimer-premium_title">Testar o Premium de graça</p>
+            <p class="disclaimer-premium_subtitle">Inscreva-se para curtir música ilimitada e podcasts só com alguns anúncios. Não precisa de cartão de crédito.</p>
+
+        </div>
+
+        <div class="button">
+
+            <button type="button">Inscreva-se grátis</button>
+
+        </div>
+
+    </footer>
+
     <script type="text/javascript" src="./js/script.js"></script>
 
 </body>
